--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,11 @@
     --hover-color: orange;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -47,18 +52,32 @@ a {
     overflow: hidden;
 }
 /* Header */
-.header {
+.fixed-header {
+    background: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+/* HERO */
+
+.hero-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 90px);
     background-color: #e6f0ff;
 }
 
 /* Navigation */
+
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    padding: 12px 0;
 }
 
 .navbar ul {
@@ -104,10 +123,6 @@ a {
 }
 
 /* Hero */
-
-.hero {
-    margin-top: 130px;
-}
 
 .hero .info {
     width: 51%;
